<resources>
    <string name="app_name" translatable="false">Template</string>
    <!--TODO: Replace base url with the correct url-->
    <string name="base_url" translatable="false">https://taskloans-staging.herokuapp.com/api/v1/</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="onboarding_title_1">Welcome to Template!</string>
    <string name="onboarding_description_1">Onboarding description 1!</string>
    <string name="onboarding_title_2">Onboarding Title 2!</string>
    <string name="onboarding_description_2">Onboarding Description 2!</string>
    <string name="onboarding_title_3">Onboarding Title 3!</string>
    <string name="onboarding_description_3">Onboarding Description 3!</string>
    <string name="login">Login</string>
    <string name="onboarding">Onboarding</string>
    <string name="recycler_fragment_example">Recycler fragment example</string>
    <string name="error">Error</string>
    <string name="check_your_internet_connection">Check your internet connection and try again</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="error_service_call_generic">Could not connect to the server. Please try again.</string>
    <string name="android_mipmap_image">android_mipmap_image</string>
    <string name="example_empty_view">Empty View Example</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="user">User</string>
    <string name="mail">Mail</string>
    <string name="password_check">Check password</string>
    <string name="create_account">Create account</string>
    <string name="title">Taskloans</string>
    <string name="sign_up_correctly">Signed up correctly</string>
    <string name="sign_in_correctly">Correct login</string>
    <string name="sign_in">Sign in</string>
    <string name="without_account">No account? <u>Create an account</u> </string>

    <string name="error_user_already_exists">Error, already exists a user with the same mail</string>
    <string name="error_name_empty">Error, name can not be empty</string>
    <string name="error_invalid_mail">Error, invalid mail</string>
    <string name="error_invalid_password">Error, password can not be empty and must has at least 8 characters</string>
    <string name="error_check_password">Error, incorrect check password</string>
    <string name="error_incorrect_login">Error, your mail or password is incorrect.</string>

    <string name="balance_fragment">Balance fragment</string>
    <string name="friends_fragment">Friends fragment</string>
    <string name="home_fragment">Home fragment</string>
</resources>
