<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="62dp"
        android:layout_height="49dp"
        android:layout_marginBottom="88dp"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="150dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/transfer"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="450dp"
        android:layout_marginEnd="104dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="7dp"
        android:text="@string/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon"
        style="@style/TitleStyle"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mailTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="81dp"
        app:hintEnabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/filled"
            android:hint="@string/mail"
            style="@style/TextInputEditTextLogin"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="25dp"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/shape"
            android:inputType="textPassword"
            android:hint="@string/password"
            style="@style/TextInputEditTextLogin"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="146dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="32dp"
        android:text="@string/sign_in"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextField"
        style="@style/ButtonStyle"
        />

    <TextView
        android:id="@+id/createAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="108dp"
        android:layout_marginStart="108dp"
        android:text="@string/without_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        style="@style/TextLinkStyle"
        />
    />

</androidx.constraintlayout.widget.ConstraintLayout>
